--- a/app/globals.css
+++ b/app/globals.css
@@ -87,3 +87,11 @@ html, body, :root {
   }
   @apply md:flex;
 }
+
+
+.hidden-md-block {
+  @media screen and (max-width:767.98px) {
+    display:none;
+  }
+  @apply md:block;
+}
